carousel squishing fix

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -36,3 +36,19 @@ footer {
 footer p {
     margin: 0px;
 }
+
+/* https://stackoverflow.com/questions/16948266/twitter-bootstrap-carousel-image-appears-distorted */
+.carousel-item {
+  height: 32rem;
+  background-color: #777;
+}
+.carousel-item > img {
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 100%;
+  height: 32rem;
+  object-fit: cover;
+  overflow: hidden;
+  object-position: 20% 19%;
+}
